tests/specs/ecosystem/chzky/fp/0_5_11.test
chzky/fp/0.5.11
-- deno.lock --
{
  "version": "3",
  "packages": {
    "specifiers": {
      "npm:dayjs@1.11.10": "npm:dayjs@1.11.10",
      "npm:rxjs@7.8.1": "npm:rxjs@7.8.1",
      "npm:zod@3.22.4": "npm:zod@3.22.4"
    },
    "npm": {
      "dayjs@1.11.10": {
        "integrity": "sha512-vjAczensTgRcqDERK0SR2XMwsF/tSvnvlv6VcF2GIhg6Sx4yOIt/irsr1RDJsKiIyBzJDpCoXiWWq28MqH2cnQ==",
        "dependencies": {}
      },
      "rxjs@7.8.1": {
        "integrity": "sha512-AA3TVj+0A2iuIoQkWEK/tqFjBq2j+6PO6Y0zJcvzLAFhEFIO3HL0vls9hWLncZbAAbK0mar7oZ4V079I/qPMxg==",
        "dependencies": {
          "tslib": "tslib@2.6.2"
        }
      },
      "tslib@2.6.2": {
        "integrity": "sha512-AEYxH93jGFPn/a2iVAwW87VuUIkR1FVUKB77NwMF7nBTDkDrrT/Hpt/IrCJ0QXhW27jTBDcf5ZY7w6RiqTMw2Q==",
        "dependencies": {}
      },
      "zod@3.22.4": {
        "integrity": "sha512-iC+8Io04lddc+mVqQ9AZ7OQ2MrUKGN+oIQyq1vemgt46jwCwLfhq7/pwnBnNXXXZb8VTVLKwp9EDkx+ryxIWmg==",
        "dependencies": {}
      }
    }
  },
  "remote": {}
}

===

== FAST CHECK EMIT FAILED ==
error[missing-explicit-return-type]: missing explicit return type in the public API
  --> /lib/TypeClass/Either.ts:51:7
   | 
51 | const leftback = <T>(val: T) => {
   |       ^^^^^^^^ this function is missing an explicit return type
   = hint: add an explicit return type of 'void' or 'never' to the function

  info: all functions in the public API must have an explicit return type
  info: functions without a return statement can have a return type of either 'void' or 'never'
  info: this function has no return statements, so a return type could not be inferred automatically
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


error[missing-explicit-return-type]: missing explicit return type in the public API
  --> /lib/TypeClass/Either.ts:54:7
   | 
54 | const rightback = <T>(val: T) => {
   |       ^^^^^^^^^ this function is missing an explicit return type
   = hint: add an explicit return type of 'void' or 'never' to the function

  info: all functions in the public API must have an explicit return type
  info: functions without a return statement can have a return type of either 'void' or 'never'
  info: this function has no return statements, so a return type could not be inferred automatically
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


